# nzshm-grid-loc

./: .bumpversion.cfg  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  makefile  mkdocs.yml  pyproject.toml  runner.py  scripts.py  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  release.yml
docs/: api.md  installation.md  usage.md
nzshm_grid_loc/: __init__.py  geography.py  geometry_manipulation.py  grid.py  grids.py  io.py  make-grid.py  neighbours.py  nzshm_grid_loc.py  plot-grid.py  plot_grid.py  regions.py  round-csv.py  simplification.py
nzshm_grid_loc/resources/: backarc.geojson  nz_bbox.geojson  wellington.geojson
resources/: nz-coastlines-and-islands-polygons-topo-150k.shpZone.Identifier  nz-coastlines-and-islands-polygons-topo-150k.shx  nz-coastlines-and-islands-polygons-topo-150k.shxZone.Identifier  small-nz.dbf  small-nz.shp  small-nz.shx
tests/: __init__.py  test_nzshm_grid_loc.py
tests/nzshm_grid_loc/: test_grid.py  test_grids.py  test_io.py
